# indie-infrastructure-initiative

./: .gitignore  DOCUMENTATION.md  README.md  pyproject.toml  upload.sh
src/in3/: __main__.py  requirements.txt
src/indie/: __main__.py
src/indie/script/: first_boot.sh  install_openwrt_lxc.sh
test/: proxmox_autoinstall_post.json  proxmox_autoinstall_post.sh
